--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@
                       <span class="log-in">Login</span></a
                     >
                   </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="service.html">
+                      <span class="sign-up"></span>
+                    </a>
+                  </li>
                 </ul>
                 <button class="theme-switch" id="theme-switch">
                   <svg
